# vto-tools

./: .directory  .gitignore  README.md  mission_control.py  vector_fields.py
Android/: 5ms_magcalibpurpose.filtered  5ms_magcalibpurpose.scaled  awkscript  calib  calib.c  calib2.c  calibrate.py  calibration_utils.py  file  file.c  readme.txt  test  test.c  udp.c
Android-ahrs/: readme.txt
Betaflight/: BTFL_backup_CINEBEE_20200413_155815.json  Betafly-FrSky  Betafly-FrSky-FatShark  iFlightCinebee75HDPlus
ConfigHelper/: PaparazziConfigs.ods  Readme.txt
Fans/: dmx control.desktop
Ivy3d/: ivy3d.py  ivymon_114_windshape.p  motiverec.py  readme.txt  ref_ivy3d.py  track2ivy.py
Morse/: readme.txt  run_morse.sh
Natnet/: direct_multicast.py  readme.txt
Nvidia/: 0_Readme_docker_install.txt  1_Readme_docker_install.txt  2_Readme_docker_sdkmanager.txt  2_Readme_docker_sdkmanager_nano.txt  3_Readme_docker_xaviernx_1.txt  4_Readme_docker_xaviernx_2.txt  5_Readme_docker_xaviernx_3.txt  6_Readme_docker_xaviernx_4.txt  Dockerfile  OLD_Readme_docker_nvidia_sdkmanager.txt
Obs/: obs.desktop  readme.txt  stream_off_huppe.desktop  stream_off_optitrack.desktop
OnboardCompagnon/: .directory
Parrot/: BeboReset2Hub.desktop  (+2 more)
QrCodes/JPOQrCodeDemo/: .gitignore  CMakeLists.txt
QrCodes/JPOQrCodeDemo/bbb/: CMakeCache.txt  JPOQrCodeDemo  Makefile  cmake_install.cmake
QrCodes/JPOQrCodeDemo/src/: main.cpp
QrCodes/QrEncoding/: CMakeLists.txt
QrCodes/QrEncoding/JPO/: Fees.tex  Licornes.tex  Rennes.tex  bonnets.tex  elfes.tex
QrCodes/QrEncoding/src/: decode.cpp  encode.cpp
(+640 files in other folders)
